# match_mobile_robotics

./: .gitignore  .gitmodules  README.md  TODO.md  index.md  setup.sh  setup_full.sh  setup_github.sh  setup_noetic.sh
.github/workflows/: build_ws.yml  ci-focal-action.yml
MiR200/: README.md  setup.py
MiR200/mir_helper/: CMakeLists.txt  package.xml
MiR200/mir_launcher/: package.xml
MiR200/mir_robot/: package.xml
docs/: _config.yml  index.html  index.md
docs/github_page/: index.html  index.md
docs/pages/: cheatsheet.md
general_hardware_helper/: CMakeLists.txt  package.xml
general_hardware_helper/base_trajectory_analytical/: CMakeLists.txt  package.xml  rosdoc.yaml
general_hardware_helper/cartesian_move/: CMakeLists.txt  package.xml
general_hardware_helper/keyence/: mainpage.dox  manifest.xml
general_hardware_helper/keyence_scanner/: CMakeLists.txt  package.xml  package.xml.bak
general_hardware_helper/manipulate_headers/: CMakeLists.txt  package.xml  setup.py
general_hardware_helper/manipulate_topics/: CMakeLists.txt  README.md  doxyfile  manifest.yaml  package.xml  rosdoc.yaml  setup.py
general_hardware_helper/master_time_sync/: master_time_sync.py
general_hardware_helper/mir_time_sync/: syncTimeMir.py  syncTimeMir_node.py
general_hardware_helper/net_box_hardware_helper/: package.xml  setup.py
general_hardware_helper/network_time_sync/: CMakeLists.txt  package.xml
general_hardware_helper/ps4-ros/: README.md
general_hardware_helper/ps4_controller/: CMakeLists.txt  package.xml  setup.py
general_hardware_helper/robot_teacher/: CMakeLists.txt  package.xml  setup.py
general_hardware_helper/schunk_egi/: CMakeLists.txt  package.xml
general_hardware_helper/watchdogs/: CMakeLists.txt  doxyfile  package.xml  setup.py
general_sim_helper/amcl_type_converter/: CMakeLists.txt  package.xml
igus/: CMakeLists.txt  package.xml
igus/scripts/: driver.py
match_gazebo/: CMakeLists.txt  package.xml
match_gazebo/launch/: big_square.launch  gazebo_world_common.launch  generic_world.launch  match_world_common.launch  scale.launch  world_advanced_maze.launch  world_cafe.launch  world_factory.launch  world_match.launch  world_maze.launch
match_gazebo/maps/: advanced_maze.pgm  advanced_maze.yaml  big_square.yaml  factory.yaml  map_05res.pgm  map_05res.yaml  match.yaml  maze.pgm  maze.yaml  scale.pgm  scale.yaml  scale_map.pgm  scale_map.xcf  scale_map.yaml  scale_map_.xcf
match_gazebo/meshes/: advanced_maze.stl
match_gazebo/worlds/: advanced_maze.world  big_square.world  match.world  maze.world  scale.world
mir/: README.md  setup.py
mir/mirMsgs/: CMakeLists.txt  package.xml  package_old.xml
mir/mirMsgs/msg/: Devices.msg  EncoderTestEntry.msg  MirLocalPlannerPathTypes.msg  MovingState.msg  PlanSegments.msg  PowerBoardMotorStatus.msg  PrecisionDockingStatus.msg  ResourceState.msg  ResourcesAcquisition.msg  ResourcesState.msg  RobotStatus.msg  ServiceResponseHeader.msg  SkidDetectionDiff.msg  SoundEvent.msg  TimeDebug.msg  WorldMap.msg  WorldModel.msg
mir/mir_description/: CMakeLists.txt  package.xml
mir/mir_driver/: CMakeLists.txt  package.xml
mir/mir_driver/launch/: mir_driver.launch
mir/mir_driver/nodes/: mir_bridge.py
mir/mir_driver/src/mir_driver/: rosbridge.py
mir/mir_examples/: CMakeLists.txt  mir_200.launch  package.xml
mir/mir_hardware_helper/: package.xml
mir/mir_helper/: CMakeLists.txt  Readme.md
mir/mir_launch_hardware/: CMakeLists.txt  package.xml
mir/mir_launch_sim/: CMakeLists.txt  package.xml
mir/mir_msgs/: CMakeLists.txt  package.xml
mir/mir_navigation/: CMakeLists.txt  package.xml
mir/mir_srvs/: CMakeLists.txt  package.xml
mir/mir_srvs/cmake/: mir_srvs-msg-extras.cmake  mir_srvs-msg-paths.cmake  mir_srvsConfig.cmake
mir/mir_srvs/srv/: AddPolygonFilter.srv  AutoBag.srv  AutoLog.srv  AutoLogDelete.srv  ColorRGB.srv  DetectPallet.srv  EncTest.srv  Error.srv  GetD400VideoDevices.srv  GetMirLog.srv  GetRobotStatus.srv  InternalIOsCommand.srv  JoystickMode.srv  LightCommand.srv  LocalisationAdjust.srv  LocateMarker.srv  MappingCommand.srv  MissionControl.srv  PlanResources.srv  PrecisionDockingCommand.srv  PromptUserAnswer.srv  ProtectiveZone.srv  RemovePolygonFilter.srv  ResetCameraInfo.srv  Safety.srv  SaveNextHookCameraRGBFrame.srv  SetFootprint.srv  SetPowerBoardState.srv  SoundControl.srv
mir_driver/nodes/: mir_bridge.py
mir_hardware_helper/: CMakeLists.txt  README.md  Readme.md  Troubleshooting.odt  package.xml  setup.py
mir_hardware_helper/launch/: mir.launch  mir_amcl.launch  miranda_plattform.launch  mur_plattform.launch  ps4_controller.launch  use_mir_localisation.launch  use_ros_localisation.launch
mir_hardware_helper/mir_driver/: package.xml  setup.py
mir_hardware_helper/mir_hardware_helper/: CMakeLists.txt
mir_hardware_helper/mir_helper/: CMakeLists.txt  package.xml
mir_hardware_helper/mir_launcher/: CMakeLists.txt
mir_hardware_helper/mir_navigation/: package.xml
mir_hardware_helper/src/: map_odom_broadcaster.cpp  odom_map_broadcaster.cpp  ps4_ros.py  robot_pose_publisher.cpp  vel_integrator_node.cpp
miranda/miranda_description/: CMakeLists.txt  package.xml
miranda/miranda_examples/: CMakeLists.txt  package.xml
miranda/miranda_hardware_helper/: package.xml
miranda/miranda_launch_hardware/: README.md
miranda/miranda_launch_sim/: CMakeLists.txt  package.xml
miranda/miranda_moveit/: .setup_assistant  CMakeLists.txt  package.xml
miranda_hardware_helper/: CMakeLists.txt  package.xml
miranda_hardware_helper/config/: control_node.yaml  controllers.yaml  move_teached.yaml
miranda_hardware_helper/launch/: mir.launch  (+11 more)
miranda_visualisation/: CMakeLists.txt  package.xml
mur_hardware_helper/: CMakeLists.txt  README.md  package.xml
net_box_hardware_helper/: CMakeLists.txt
panda/: README.md
panda_hardware_helper/: README.md  package.xml
scout_mini/: CMakeLists.txt  package.xml
ur/: Jacobi_symbolic.m
ur_hardware_helper/: CMakeLists.txt  README.md  Readme.md  package.xml
ur_visualisation/: CMakeLists.txt  package.xml
(+1092 files in other folders)
