<?xml version="1.0"?>
<package format="2">
  <name>mir_driver</name>
  <version>1.0.2</version>
  <description>A reverse ROS bridge for the MiR100 robot</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author email="martin.guenther@dfki.de">Martin Günther</author>

  <license>BSD</license>
  <license>Apache 2.0</license>

  <url type="website">https://github.com/dfki-ric/mir_robot</url>
  <url type="repository">https://github.com/dfki-ric/mir_robot</url>
  <url type="bugtracker">https://github.com/dfki-ric/mir_robot/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <depend>actionlib_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>mir_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>python3-websocket</depend>
  <depend>rosgraph_msgs</depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>rospy_message_converter</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>sdc21x0</depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>  
  <build_depend>tf2_geometry_msgs</build_depend>

  <exec_depend>mir_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
